# sat-checker

./: Cargo.toml  LICENSE  bad-conflict-assume.txt  bad-conflict-seed.txt  build.rs  flake.nix
instance/: Cargo.toml  build.rs
instance/src/: main.rs
runner/: Cargo.toml
runner/src/: main.rs
src/: main.rs
