[package]
name = "minisat-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["cargo", "derive", "wrap_help"] }
color-eyre = "0.6.2"
getrandom = "0.2.9"
rand = { version = "0.8.5", features = ["small_rng"] }
