[package]
name = "sat-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["cargo", "derive", "wrap_help", "env"] }
color-eyre = "0.6.2"
getrandom = "0.2.9"
ndhistogram = "0.9.0"
patricia_tree = "0.5.7"
rand = { version = "0.8.5", features = ["small_rng"] }
tokio = { version = "1.28.1", features = ["full"] }
