[package]
name = "sat-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.3.0", features = ["cargo", "derive", "wrap_help", "env"] }
color-eyre = "0.6.2"
either = "1.8.1"
futures-core = "0.3.28"
getrandom = "0.2.9"
ndhistogram = "0.9.0"
num-traits = "0.2.15"
rand = { version = "0.8.5", features = ["small_rng"] }
sorted-vec = "0.8.2"
these = "2.0.0"
tokio = { version = "1.28.1", features = ["full"] }
